[package]
name = "arima"
description = "ARIMA time series modeling for Rust."
version = "0.2.0"
authors = ["Kai Fricke <coding@kaifricke.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/krfricke/arima"
repository = "https://github.com/krfricke/arima"

exclude = [
    ".idea/",
]

[badges]
travis-ci = { repository = "krfricke/arima", branch = "master" }

[features]
default = []
openblas = ["lapack", "lapack-sys", "openblas-src"]
accelerate = ["lapack", "lapack-sys", "accelerate-src"]
intel-mkl = ["lapack", "lapack-sys", "intel-mkl-src"]
netlib = ["lapack", "lapack-sys", "netlib-src"]

[dependencies]
lbfgs = "0.2.1"
more-asserts = "0.2.1"
num = "0.2.0"
optimization = "0.1.0"
rand = "0.7.3"

[dependencies.lapack]
version = "0.16.0"
optional = true

[dependencies.lapack-sys]
version = "0.12.0"
optional = true

[dependencies.accelerate-src]
version = "0.3"
optional = true

[dependencies.intel-mkl-src]
version = "0.4"
optional = true

[dependencies.netlib-src]
version = "0.7"
optional = true

[dependencies.openblas-src]
version = "0.7"
optional = true